--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
 <p>Email: your.email@example.com</p>
 <p>GitHub: github.com/YOU
 R_USERNAME</p>
-
+<a href
+="index.html">
+← Back to Home</a>
 </body>
 </html>
